# state_machine

./: .cproject  .gitignore  .project  CMakeLists.txt  Readme.md  package.xml
launch/: state_machine_start.launch
msg/: Attitude.msg  BatteryStatus.msg  Distance.msg  Distance_Measure_Enable.msg  DrawingBoard.msg  DrawingBoard10.msg  FIXED_BOX_POSITION_P2M.msg  FIXED_BOX_RETURN_M2P.msg  FIXED_TARGET_POSITION_P2M.msg  FIXED_TARGET_RETURN_M2P.msg  FailureRecord.msg  GPS_Status.msg  GRAB_STATUS_M2P.msg  HeadBoardYaw.msg  OBSTACLE_POSITION_M2P.msg  Setpoint.msg  TASK_STATUS_CHANGE_P2M.msg  TASK_STATUS_MONITOR_M2P.msg  Task_Status_to_Vision.msg  VISION_NUM_SCAN_M2P.msg  VISION_ONE_NUM_GET_M2P.msg  VISITION_POSITION_GET_M2P.msg  VisionCarBoardPos.msg  Vision_Position_Multiple.msg  Vision_Position_Raw.msg  YAW_SP_CALCULATED_M2P.msg  attributeStatus_F2L.msg  positionXY.msg  takeOffCommand_L2F.msg  taskStatusMonitor.msg
src/: attitude_adjust_test.cpp  collaborate_track_car.cpp  collaborate_track_car_1.cpp  collaborate_uav1.cpp  collaborate_uav1_gs.cpp  collaborate_uav2.cpp  collaborate_uav2_gs.cpp  collaborate_uav3.cpp  collaborate_uav3_gs.cpp  collaborate_uav4.cpp  collaborate_uav4_gs.cpp  collaborate_uav5_gs.cpp  coordinate_exchange.cpp  distance_sensor.cpp  distance_sensor_test.cpp  distance_sensor_voice.cpp  emergency.cpp  for_test.cpp  four_point_test.cpp  get_board_position.cpp  get_board_position_receive.cpp  grab_test.cpp  mavlink_pub_msg.cpp  mavlink_sub_msg.cpp  offb_simulation_test.cpp  pub_board_position.cpp  send10picture_position.cpp  send3point.cpp  send4setpoint.cpp  send_board_position.cpp  send_expected_pos.cpp  serial_test.cpp  state_machine.cpp  state_machine_Continue_Grab.cpp  state_machine_Continue_Grab_ChangeP.cpp  state_machine_Continue_Grab_ChangeP_Yaw.cpp  state_machine_Continue_Grab_FixT.cpp  state_machine_Continue_Grab_FixT_Yaw.cpp  state_machine_FixedP_Full_v1.0.cpp  state_machine_FixedP_Full_v2.0.cpp  (+60 more)
